--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add to card</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" href="style.css">
 
 
@@ -26,7 +27,7 @@
             <div class=" main-card  " onclick="selectCard(1)">
                 <div class="card">
                     <div class="card-left center  ">
-                        <h3>30% Off</h3>
+                        <p>30% Off</p>
                     </div>
                     <div class="flex py  btwn">
                         <div class="card-right">
@@ -105,7 +106,7 @@
             <div class=" main-card  " onclick="selectCard(2)">
                 <div class="card">
                     <div class="card-left center ">
-                        <h3>30% Off</h3>
+                        <p>30% Off</p>
                     </div>
                     <div class="flex py   btwn">
                         <div class="card-right">
@@ -184,7 +185,7 @@
             <div class=" main-card " onclick="selectCard(3)">
                 <div class="card">
                     <div class="card-left center  ">
-                        <h3>10% Off</h3>
+                        <p class="">10% Off</p>
                     </div>
                     <div class="flex py   btwn">
                         <div class="card-right">
@@ -268,7 +269,7 @@
                         Total: $18.00 USD
                     </p>
                 </div>
-                <div>
+                <div class="">
                     <button class="btn">
                         <i class="fa-solid fa-plus"></i>
                         Add to Cart</button>
