chore: Update price display on index.html

--- a/index.html
+++ b/index.html
@@ -197,7 +197,9 @@
                                         10% Off
                                     </span></p>
                                 <p class="offer">
-                                    $36.00 USD
+                                    $36.00 USD <span class="strike none ">
+                                        $25.71 USD
+                                    </span>
                                 </p>
                             </div>
 
