refactor: Update radio input class name for card selection

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="flex py  btwn">
                         <div class="card-right">
-                            <input type="radio" class="input" />
+                            <input type="radio" class="radio" />
 
                             <div class="text-container">
 
@@ -58,7 +58,7 @@
                     <div class="flex">
                         <div class="w"></div>
                         <p class="text w-s ">Size</p>
-                        <p class="text ">Color</p>
+                        <p class="text ">Colour</p>
                     </div>
 
                     <div class="flex">
@@ -70,7 +70,7 @@
                             <option>L</option>
                         </select>
                         <select>
-                            <option disabled selected> Color</option>
+                            <option disabled selected> Colour</option>
                             <option>Red</option>
                             <option>Black</option>
                             <option>Yellow</option>
@@ -87,7 +87,7 @@
                             <option>L</option>
                         </select>
                         <select>
-                            <option disabled selected> Color</option>
+                            <option disabled selected> Colour</option>
                             <option>Red</option>
                             <option>Black</option>
                             <option>Yellow</option>
@@ -110,7 +110,7 @@
                     </div>
                     <div class="flex py   btwn">
                         <div class="card-right">
-                            <input type="radio" class="input" />
+                            <input type="radio" class="radio" />
 
                             <div class="text-container">
 
@@ -139,7 +139,7 @@
                     <div class="flex">
                         <div class="w"></div>
                         <p class="text w-s ">Size</p>
-                        <p class="text w-s ">Color</p>
+                        <p class="text w-s ">Colour</p>
                     </div>
 
                     <div class="flex">
@@ -151,7 +151,7 @@
                             <option>L</option>
                         </select>
                         <select>
-                            <option disabled selected> Color</option>
+                            <option disabled selected> Colour</option>
                             <option>Red</option>
                             <option>Black</option>
                             <option>Yellow</option>
@@ -168,7 +168,7 @@
                             <option>L</option>
                         </select>
                         <select>
-                            <option disabled selected> Color</option>
+                            <option disabled selected> Colour</option>
                             <option>Red</option>
                             <option>Black</option>
                             <option>Yellow</option>
@@ -189,7 +189,7 @@
                     </div>
                     <div class="flex py   btwn">
                         <div class="card-right">
-                            <input type="radio" class="input" />
+                            <input type="radio" class="radio" />
 
                             <div class="text-container">
 
@@ -211,12 +211,11 @@
 
 
 
-
                 <div class="gap none">
                     <div class="flex">
                         <div class="w"></div>
                         <p class="text w-s ">Size</p>
-                        <p class="text ">Color</p>
+                        <p class="text w-s ">Colour</p>
                     </div>
 
                     <div class="flex">
@@ -228,7 +227,7 @@
                             <option>L</option>
                         </select>
                         <select>
-                            <option disabled selected> Color</option>
+                            <option disabled selected> Colour</option>
                             <option>Red</option>
                             <option>Black</option>
                             <option>Yellow</option>
@@ -245,14 +244,11 @@
                             <option>L</option>
                         </select>
                         <select>
-                            <option disabled selected> Color</option>
+                            <option disabled selected> Colour</option>
                             <option>Red</option>
                             <option>Black</option>
                             <option>Yellow</option>
                         </select>
-
-
-
 
 
 
@@ -262,6 +258,7 @@
                 </div>
 
             </div>
+
             <div class="btn-container">
                 <div class="flex btwn">
                     <p class="free">
